package org.doctech.documentation.model;


public enum DocumentationStatus {
    DRAFT,
    REVIEW,
    PUBLISHED,
    ARCHIVED,
    
}