package org.doctech.documentation.model;

public enum TechnologyType {
    GETTING_STARTED,
    PROGRAMMING_LANGUAGE,
    FRAMEWORK,
    LIBRARY,
    FRONTEND,
    BACKEND,
    RESOURCES,
    ADVANCED,
    DEVOPS,
    API,
    TOOL,
    DATABASE,
    CLOUD_SERVICE,
    OTHER
}